# AI-NLP

./: README.md
Agents/: FinanceSrapping.ipynb  README.md  Rag-chatbot.ipynb  Trait_llm_depotV1.ipynb  Trait_llm_depot_sp_book.ipynb  Traitement__Depots_llm_V1.ipynb  claude-debutant.md  langchain-agents.ipynb  langchain-retrieval-agent.ipynb
Agents/Parlant-sql/: ChatbotUseParlant.yml  INSTALLATION_SUMMARY.txt  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SQl_parlant_concept.yml  create_demo_database.py  example_integration.py  load_schemas.bat  pyproject.toml
Agents/Parlant-sql/database_schema/: README.md  appointments_table.md  doctors_table.md  patients_table.md  prescriptions_table.md
Agents/Parlant-sql/parlant_sql/: __init__.py  app.py  cli.py  module.py
Agents/Parlant-sql/text_to_sql_examples/: aggregations.md  basic_queries.md  join_queries.md
Langchain/: Embedding_index.ipynb  LangChain_Retriever.ipynb  LangchainBasics.ipynb  Rag From Scratch_ Parts 1 - 4.ipynb
LightRAG/: COMMENT_LANCER.md  DEMARRAGE_RAPIDE.txt  GUIDE_RAPIDE.md  LANCER_ANALYSE.bat  LIRE_EN_PREMIER.txt  Présentation association mairie.docx  README_KOSMO.md  VERIFIER_SEULEMENT.bat  claude-debutant.md  claude.md  mon_premier_test.py  verifier_installation.py
MCP/MCP_CrewAi/: PROCESSUS_DETAILLE.md  README_FINAL.md  pharmacy_crew.py  pyproject.toml  server.py  start_server.bat
MCP/MCP_CrewAi/pharmacy_docs/: dermatologie.txt
Prompt Engineering/: Anthropic_prompt_engineering.ipynb  Doc-Text-Base.ipynb  LangGraphAgent_ThoT.ipynb  Prompt_Arbo_Octobre.xml  analogical_prompt  (+4 more)
(+350 files in other folders)
