[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "parlant-sql"
version = "0.1.0"
description = "A Text-to-SQL tool service for Parlant agents"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "parlant_sql"}]

[tool.poetry.dependencies]
python = "^3.10"
parlant = ">=0.1.0"
click = "^8.1.0"
aiofiles = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
mypy = "^1.5.0"
black = "^23.7.0"

[tool.poetry.scripts]
parlant-sql = "parlant_sql.cli:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

