[project]
name = "crewai-mcp-ex1"
version = "1.0.0"
description = "Serveur MCP pour l'analyse de documents pharmaceutiques avec CrewAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "crewai>=0.28.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
]

[project.scripts]
crewai-mcp-ex1 = "server:main"